tests/samples/invalid/assign_struct_view_to_struct.pn

struct BigStruct;

fn main(data: BigStruct)
{
	var copy_of_data = data;
}
